uptil working todo

--- a/function/style.css
+++ b/function/style.css
@@ -59,7 +59,7 @@ button {
     color: black;
 }
 
-.add:hover{
+.add:hover {
     background: #FFC600;
     color: white;
 }
@@ -79,7 +79,7 @@ button {
     border: 2px solid black;
     border-radius: 1rem;
     overflow: hidden;
-    box-shadow: 7.25px 7.25px black;
+    box-shadow: 8px 8px black;
 }
 
 .todo-list {
@@ -98,13 +98,15 @@ li {
     margin-right: 0.85rem;
 }
 
+
 .item {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.list-items {
+.list-items,
+.finished {
     border-bottom: 0.12rem solid black;
     display: flex;
     align-items: center;
@@ -131,4 +133,9 @@ li {
     color: white;
     border-radius: 50%;
     transform: scale(1.2);
+}
+
+
+.finished {
+    opacity: 0.5;
 }
