--- a/function/style.css
+++ b/function/style.css
@@ -155,7 +155,7 @@ li {
 }
 
 .copyright {
-    margin-top: 7%;
+    margin-top: 4rem;
     font-family: 'Poppins', sans-serif;
     font-size: 0.85rem;
     color: #222222
