--- a/function/style.css
+++ b/function/style.css
@@ -174,6 +174,17 @@ li {
     transform: translateX(-150%);
 }
 
+.liItem-date{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.current-date {
+    font-size: 0.75rem;
+    color: rgba(128, 128, 128, 0.726);
+}
+
 
 
 /* for all mobile view  */
