--- a/function/style.css
+++ b/function/style.css
@@ -174,7 +174,7 @@ li {
     transform: translateX(-150%);
 }
 
-.liItem-date{
+.liItem-date {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -183,6 +183,30 @@ li {
 .current-date {
     font-size: 0.75rem;
     color: rgba(128, 128, 128, 0.726);
+}
+
+/* filter  */
+.filter {
+    margin-top: 1.5rem;
+    display: flex;
+    justify-content: space-evenly;
+    font-family: 'Poppins', sans-serif;
+}
+
+.filter-status{
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.filter-status>p{
+    padding: 0 0.5rem;
+}
+
+.active {
+    width: 100%;
+    border: 1px solid black;
 }
 
 
