--- a/function/style.css
+++ b/function/style.css
@@ -119,7 +119,7 @@ li {
 
 .list-items,
 .moveLeft {
-    border-bottom: 0.12rem solid black;
+    border-bottom: 1px solid rgba(122, 122, 122, 0.596);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -174,6 +174,7 @@ li {
     transform: translateX(-150%);
 }
 
+/* date  */
 .liItem-date {
     display: flex;
     flex-direction: column;
@@ -182,31 +183,40 @@ li {
 
 .current-date {
     font-size: 0.75rem;
+    font-weight: normal;
     color: rgba(128, 128, 128, 0.726);
 }
 
 /* filter  */
 .filter {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
+    padding: 0 1.5rem;
+}
+
+.filter-inner {
     display: flex;
     justify-content: space-evenly;
     font-family: 'Poppins', sans-serif;
+    border-bottom: 1px solid rgba(122, 122, 122, 0.596);
 }
 
-.filter-status{
+.filter-status {
     cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
-.filter-status>p{
-    padding: 0 0.5rem;
+.filter-status>p {
+    padding: 0 0.5rem 1rem;
 }
 
 .active {
     width: 100%;
     border: 1px solid black;
+    position: absolute;
+    bottom: 0;
 }
 
 
